--- a/src/components/date-picker/calendar-month/calendar-month.scss
+++ b/src/components/date-picker/calendar-month/calendar-month.scss
@@ -1,9 +1,49 @@
 .calendar-month {
+  .pins {
+    width: 540px;
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    top: 8px;
+    .pin {
+      display: flex;
+      flex-direction: row;
+      div {
+        width: 4px;
+        border-radius: 3px;
+        margin-left: 2px;
+        background: silver;
+        height: 25px;
+      }
+    }
+  }
   display: flex;
   flex-direction: column;
   .calendar-title {
     display: flex;
     flex-direction: column;
+    .navigator-container {
+      background: red;
+      color: white;
+      font-size: 30px;
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-end;
+      border: 1px solid black;
+      height: 60px;
+      .month {
+        margin-left: 10px;
+      }
+      .year {
+        margin-right: 10px;
+      }
+      .navigator {
+        width: 50%;
+        display: flex;
+        justify-content: space-between;
+        font-size: 30px;
+      }
+    }
     .daysOfWeek {
       display: flex;
       flex-direction: row;
@@ -18,11 +58,22 @@
     justify-content: center;
     align-items: center;
     border: 1px solid black;
-    width: 70px;
+    min-width: 76px;
     min-height: 40px;
-    background: gray;
-    &.currentMonth {
-      background: lightblue;
+    background: white;
+    color: black;
+    &:not(.currentMonth) {
+      color: red;
+    }
+    &.title {
+      color: black;
+      background: gray;
+    }
+    &.next-month-flipper{
+      position: absolute;
+      top: 42.5%;
+      left: 28px;
+      border-bottom-left-radius: 40px;
     }
   }
 }
