--- a/src/components/date-picker/date-picker.scss
+++ b/src/components/date-picker/date-picker.scss
@@ -1,3 +1,14 @@
 .date-picker {
   display: flex;
+  .calendar-pages {
+    display: flex;
+    margin-left: -10px;
+    .page {
+      background: silver;
+      width: 1.5px;
+      margin-left: 1px;
+      transform: rotate(-4deg);
+      z-index: -1;
+    }
+  }
 }
