--- a/src/components/date-picker/date-picker.scss
+++ b/src/components/date-picker/date-picker.scss
@@ -1,14 +1,45 @@
 .date-picker {
-  display: flex;
-  .calendar-pages {
+  .stand {
     display: flex;
-    margin-left: -10px;
-    .page {
-      background: silver;
-      width: 1.5px;
-      margin-left: 1px;
-      transform: rotate(-4deg);
-      z-index: -1;
+    border: 2px solid darkgrey;
+    border-radius: 5px;
+    position: absolute;
+    width: 296px;
+    height: 296px;
+
+    &.front {
+      z-index: 9999;
+      transform: skew(-8deg);
+      background: white;
+    }
+    &.back {
+      background: lightgray;
+      position: absolute;
+      z-index: 9998;
+      transform: skew(5deg);
+      margin-left: 30px;
+      width: 300px;
+      height: 296px;
+    }
+  }
+  .pins {
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    z-index: 10000;
+    width: 296px;
+    margin-top: -10px;
+    margin-left: 20px;
+
+    .pin {
+      display: flex;
+      flex-direction: row;
+      div {
+        width: 4px;
+        border-radius: 100%;
+        border: 2px solid lightgray;
+        height: 25px;
+      }
     }
   }
 }
