date picker animation

--- a/src/components/date-picker/calendar-month/calendar-month.scss
+++ b/src/components/date-picker/calendar-month/calendar-month.scss
@@ -4,6 +4,13 @@
   display: flex;
   flex-direction: column;
   position: absolute;
+  transform: rotateY(0deg);
+  transform-style: preserve-3d;
+  transform-origin: top;
+  transition: all .1s ease-in;
+  &:hover {
+    transform: rotateX(-180deg);
+  }
   .calendar-title {
     flex: 25%;
     display: flex;
