--- a/src/components/date-picker/calendar-month/calendar-month.scss
+++ b/src/components/date-picker/calendar-month/calendar-month.scss
@@ -1,15 +1,127 @@
 .calendar-month {
+  --lastDegree: 5deg
+}
+
+@keyframes flipAnimation {
+  10% {
+    z-index: 10000;
+    transform: skew(-8deg) rotateX(-30deg);
+  }
+  20% {
+    z-index: 10000;
+    transform: skew(-8deg) rotateX(-60deg);
+  }
+  30% {
+    z-index: 10000;
+    transform: skew(-8deg) rotateX(-90deg);
+  }
+  40% {
+    z-index: 10000;
+    transform: skew(-8deg) rotateX(-120deg);
+  }
+  50% {
+    z-index: 10000;
+    transform: skew(-8deg) rotateX(-150deg);
+  }
+  55% {
+    z-index: 9997;
+    transform: skew(-8deg) rotateX(-180deg);
+  }
+  60% {
+    z-index: 9997;
+    transform: skew(-8deg) rotateX(-150deg);
+  }
+  70% {
+    z-index: 9997;
+    transform: skew(-8deg) rotateX(-120deg);
+  }
+  80% {
+    z-index: 9997;
+    transform: skew(-8deg) rotateX(-90deg);
+  }
+  90% {
+    z-index: 9997;
+    transform: skew(-8deg) rotateX(-60deg);
+  }
+  95% {
+    z-index: 9997;
+    transform: skew(0deg) rotateX(-30deg);
+  }
+  100% {
+    z-index: 9997;
+    transform: skew(var(--lastDegree)) rotateX(0deg);
+  }
+}
+
+@keyframes flipAnimationBack {
+  10% {
+    z-index: 9997;
+    transform: skew(var(--lastDegree)) rotateX(0deg);
+  }
+  20% {
+    z-index: 9997;
+    transform: skew(var(--lastDegree)) rotateX(-30deg);
+  }
+  30% {
+    z-index: 9997;
+    transform: skew(var(--lastDegree)) rotateX(-60deg);
+  }
+  40% {
+    z-index: 9997;
+    transform: skew(var(--lastDegree)) rotateX(-90deg);
+  }
+  50% {
+    z-index: 9997;
+    transform: skew(-3deg) rotateX(-120deg);
+  }
+  55% {
+    z-index: 9997;
+    transform: skew(-3deg) rotateX(-150deg);
+  }
+  60% {
+    z-index: 9997;
+    transform: skew(-3deg) rotateX(-180deg);
+  }
+  70% {
+    z-index: 10000;
+    transform: skew(-3deg) rotateX(-150deg);
+  }
+  80% {
+    z-index: 10000;
+    transform: skew(-3deg) rotateX(-120deg);
+  }
+  90% {
+    z-index: 10000;
+    transform: skew(-3deg) rotateX(-90deg);
+  }
+  95% {
+    z-index: 10000;
+    transform: skew(-3deg) rotateX(-60deg);
+  }
+  100% {
+    z-index: 10000;
+    transform: skew(-3deg) rotateX(0deg);
+  }
+}
+
+.calendar-month {
   width: 296px;
   height: 296px;
   display: flex;
   flex-direction: column;
   position: absolute;
-  transform: rotateY(0deg);
   transform-style: preserve-3d;
   transform-origin: top;
-  transition: all .1s ease-in;
-  &:hover {
-    transform: rotateX(-180deg);
+  transform: rotateX(0deg) skew(-3deg);
+  z-index: 9999;
+  margin-left: 6px;
+  border: 2px solid darkgrey;
+  border-radius: 5px;
+  &.fliped-front {
+    animation: flipAnimation 1s linear both;
+  }
+  &.fliped-back{
+    animation: flipAnimationBack 1s linear both;
   }
   .calendar-title {
     flex: 25%;
@@ -25,6 +137,9 @@
       flex: 40;
       .move-month {
         cursor: pointer;
+        border: none;
+        background: transparent;
+        outline: none;
       }
       .navigator {
         width: 50%;
