--- a/src/components/calendar-month/calendar-month.scss
+++ b/src/components/calendar-month/calendar-month.scss
@@ -5,116 +5,117 @@
 @keyframes flipAnimation {
   10% {
     z-index: 10000;
-    transform: skew(-8deg) rotateX(-30deg);
+    transform: skew(-8deg) rotateX(-30deg) translateZ(0);
   }
   20% {
     z-index: 10000;
-    transform: skew(-8deg) rotateX(-60deg);
+    transform: skew(-8deg) rotateX(-60deg) translateZ(0);
   }
   30% {
     z-index: 10000;
-    transform: skew(-8deg) rotateX(-90deg);
+    transform: skew(-8deg) rotateX(-90deg) translateZ(0);
   }
   40% {
     z-index: 10000;
-    transform: skew(-8deg) rotateX(-120deg);
+    transform: skew(-8deg) rotateX(-120deg) translateZ(0);
   }
   50% {
     z-index: 10000;
-    transform: skew(-8deg) rotateX(-150deg);
+    transform: skew(-8deg) rotateX(-150deg) translateZ(0);
   }
   55% {
     z-index: 9997;
-    transform: skew(-8deg) rotateX(-180deg);
+    transform: skew(-8deg) rotateX(-180deg) translateZ(0);
   }
   60% {
     z-index: 9997;
-    transform: skew(-8deg) rotateX(-150deg);
+    transform: skew(-8deg) rotateX(-150deg) translateZ(0);
   }
   70% {
     z-index: 9997;
-    transform: skew(-8deg) rotateX(-120deg);
+    transform: skew(-8deg) rotateX(-120deg) translateZ(0);
   }
   80% {
     z-index: 9997;
-    transform: skew(-8deg) rotateX(-90deg);
+    transform: skew(-8deg) rotateX(-90deg) translateZ(0);
   }
   90% {
     z-index: 9997;
-    transform: skew(-8deg) rotateX(-60deg);
+    transform: skew(-8deg) rotateX(-60deg) translateZ(0);
   }
   95% {
     z-index: 9997;
-    transform: skew(0deg) rotateX(-30deg);
+    transform: skew(0deg) rotateX(-30deg) translateZ(0);
   }
   100% {
     z-index: 9997;
-    transform: skew(var(--lastDegree)) rotateX(0deg);
+    transform: skew(var(--lastDegree)) rotateX(0deg) translateZ(0);
   }
 }
 
 @keyframes flipAnimationBack {
   10% {
     z-index: 9997;
-    transform: skew(var(--lastDegree)) rotateX(0deg);
+    transform: skew(var(--lastDegree)) rotateX(0deg) translateZ(0);
   }
   20% {
     z-index: 9997;
-    transform: skew(var(--lastDegree)) rotateX(-30deg);
+    transform: skew(var(--lastDegree)) rotateX(-30deg) translateZ(0);
   }
   30% {
     z-index: 9997;
-    transform: skew(var(--lastDegree)) rotateX(-60deg);
+    transform: skew(var(--lastDegree)) rotateX(-60deg) translateZ(0);
   }
   40% {
     z-index: 9997;
-    transform: skew(var(--lastDegree)) rotateX(-90deg);
+    transform: skew(var(--lastDegree)) rotateX(-90deg) translateZ(0);
   }
   50% {
     z-index: 9997;
-    transform: skew(-3deg) rotateX(-120deg);
+    transform: skew(-3deg) rotateX(-120deg) translateZ(0);
   }
   55% {
     z-index: 9997;
-    transform: skew(-3deg) rotateX(-150deg);
+    transform: skew(-3deg) rotateX(-150deg) translateZ(0);
   }
   60% {
     z-index: 9997;
-    transform: skew(-3deg) rotateX(-180deg);
+    transform: skew(-3deg) rotateX(-180deg) translateZ(0);
   }
   70% {
     z-index: 10000;
-    transform: skew(-3deg) rotateX(-150deg);
+    transform: skew(-3deg) rotateX(-150deg) translateZ(0);
   }
   80% {
     z-index: 10000;
-    transform: skew(-3deg) rotateX(-120deg);
+    transform: skew(-3deg) rotateX(-120deg) translateZ(0);
   }
   90% {
     z-index: 10000;
-    transform: skew(-3deg) rotateX(-90deg);
+    transform: skew(-3deg) rotateX(-90deg) translateZ(0);
   }
   95% {
     z-index: 10000;
-    transform: skew(-3deg) rotateX(-60deg);
+    transform: skew(-3deg) rotateX(-60deg) translateZ(0);
   }
   100% {
     z-index: 10000;
-    transform: skew(-3deg) rotateX(0deg);
+    transform: skew(-3deg) rotateX(0deg) translateZ(0);
   }
 }
 
 .calendar-month {
   width: 296px;
-  height: 296px;
+  height: 350px;
   display: flex;
+  background: white;
   flex-direction: column;
   position: absolute;
   transform-style: preserve-3d;
   transform-origin: top;
-  transform: rotateX(0deg) skew(-3deg);
+  transform: rotateX(0deg) skew(-3deg) translateZ(0);
   z-index: 9999;
-  margin-left: 6px;
+  margin-left: 305px;
   border: 2px solid darkgrey;
   border-radius: 5px;
   &.fliped-front {
@@ -174,7 +175,6 @@
       &:not(.currentMonth) {
         color: red;
       }
-
       &.title {
         color: black;
         background: gray;
