added some range

--- a/src/components/calendar-month/calendar-month.scss
+++ b/src/components/calendar-month/calendar-month.scss
@@ -180,10 +180,12 @@
       &:not(.title) {
         margin: 2px;
         &:not(.disable) {
-          &:hover {
-            background: lightblue;
-            border-radius: 50%;
-            cursor: pointer;
+          &.currentMonth {
+            &:hover {
+              background: lightblue;
+              border-radius: 50%;
+              cursor: pointer;
+            }
           }
           &.selected {
             cursor: pointer;
